# svenzva

svenzva_demo/config/: repeatability.yaml
svenzva_demo/src/: pick_and_place.py  test_cases.py  weight.py
svenzva_description/: urdf.rviz
svenzva_description/launch/: gazebo.launch  gazebo_ros_control.launch  start_simulation_control.launch
svenzva_description/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
svenzva_description/robots/: svenzva_arm.urdf  svenzva_arm.xacro  svenzva_arm_small.urdf
svenzva_description/robots/accessories/: fingers.xacro  pen_holder.xacro  vacuum_holder.xacro
svenzva_drivers/: CMakeLists.txt  package.xml
svenzva_drivers/config/: RevelFirmwareDynamic.cfg  control_params.yaml  controller_params.yaml  joint_trajectory_controller.yaml  mayan.yaml  sample.yaml
svenzva_drivers/launch/: arm_controller.launch  controller_manager.launch  dyn_control.launch  svenzva_bringup.launch
svenzva_joy/: CMakeLists.txt  package.xml
svenzva_joy/launch/: svenzva_2axis_custom.launch  svenzva_6axis_custom.launch  svenzva_joy.launch  svenzva_xbox_joy.launch
svenzva_joy/src/: svenzva_2axis_controller.cpp  svenzva_3axis_controller.cpp  svenzva_6axis_controller.cpp  svenzva_joystick_controller.cpp
svenzva_moveit/: .setup_assistant
svenzva_moveit/config/: svenzva_arm.srdf
svenzva_msgs/: CMakeLists.txt
svenzva_msgs/action/: Gripper.action
svenzva_simulation/launch/: gazebo_ros_control.launch
svenzva_utils/config/: full_pick_and_place.yaml
svenzva_utils/src/: kinesthetic_teaching_console.py
(+17 files in other folders)
